manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mnist-wml-app-service
spec:
  selector:
    app: mnist-wml-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
